refactor(learntrade): modify components and i18n of learnTrade pages

--- a/src/i18n/locales/ar/intermediateTrading.json
+++ b/src/i18n/locales/ar/intermediateTrading.json
@@ -107,7 +107,7 @@
   "whetherItIsProfitOrLoss": "سواء كان ربحًا أو خسارة؛;",
   "openingAndClosingPositions": "لقطة شاشة لفتح وإغلاق الصفقات للمخطط الزمني..",
   "ifYouWantToBeAConsistent": "إذا كنت تريد أن تكون متداولًا مستمراً، فإن وجود استراتيجية تداول هو أمر بالغ الأهمية - لا تقلل أبدًا من قوة الخطة.",
-  "whatIsAChartPattern": "ما هو نمط الرسم البياني؟？",
+  "whatIsAChartPattern": "ما هو نمط الرسم البياني؟?",
   "inTheMarketBuyersAnd": "يلعب المشترون والبائعون في السوق ألعاباً طوال الوقت، والرسم البياني عبارة عن سجل لنتائج هذه اللعبة. وجد الناس تدريجياً بعض أنماط المخططات النموذجية على الرسم البياني. بمساعدتهم، يستطيع الناس أن يروا بوضوح ما إذا كان المشتري هو المسيطر أم أن البائع هو صاحب القوة في السوق. علاوة على ذلك، مع ظهور هذه الأنماط الكلاسيكية مرارًا وتكرارًا ، يجد الناس أن نفس التغييرات في قوة المشترين والبائعين تظهر دائمًا في السوق. لذلك، يمكننا استخدام تجربة أنماط التعلم للتنبؤ بالاتجاه العام لتوقعات السوق. هذا هو تحليل النمط.",
   "typicalChartPatterns": "تتضمن أنماط الرسم البياني النموذجية نوعين: أنماط الانعكاس والأنماط المستمرة. في هذه المقالة، سوف نقدم أنماط الرسم البياني الثلاثة الأكثر شيوعًا لفهم كيفية توقع تحليل الأنماط لتحركات الأسعار، وكيف يتخذ الأشخاص قرارات التداول من خلال تحليل الأنماط.",
   "headAndShoulders": "الرأس والكتفين",
@@ -134,7 +134,7 @@
   "stopLossCanHelp": "إن وقف الخسارة يمكن أن تساعدك على تقليل التدخل العاطفي في التداول، كما أنها مفيدة للغاية عندما لا يمكنك مراقبة السوق باستمرار.",
   "supposeThereIsAn": "لنفترض أن هناك مركز شراء AUS200، وسعر الفتح هو 50.66، وتم تعيين وقف الخسارة عند 50.26. عند انخفاض ​​السعر إلى 50.26، سيتم تنفيذ وقف الخسارة تلقائيًا، مما يسمح بإغلاق المركز عند السعر القابل للتنفيذ التالي. في هذا المثال، المركز قد خسر 40 نقطة.",
   "itIsWorthNotingThat": "من الجدير بالذكر أن وقف الخسارة ليس مضمونًا تمامًا ليتم تنفيذه بالسعر الذي تحدده. نظرًا لاحتمالية وجود فجوة سعرية في السوق، فسوف يتسبب ذلك في تنفيذ وقف الخسارة بسعر مختلف. تشير الفجوة السعرية في السوق إلى نوع من التقلبات السعرية المفاجئة التي تحدث في فترة زمنية قصيرة جدًا.",
-  "howMuchStopLoss": "ما مقدار وقف الخسارة الذي يجب تعيينه؟ ？",
+  "howMuchStopLoss": "ما مقدار وقف الخسارة الذي يجب تعيينه؟ ?",
   "onceYouOpenAPosition": "بمجرد فتح صفقة، عليك التفكير في مقدار وقف الخسارة الذي تحتاج إلى تعيينه. يجب أن يعتمد إعداد وقف الخسارة على تحملك الشخصي للمخاطر، ولكن يجب ألا يكون عدد نقاط وقف الخسارة صغيرًا جدًا، وإلا فقد يتم إيقاف المعاملة في وقت قريب جدًا. عادة، تحتاج إلى ترك بعض المساحة المعقولة للخسائر العائمة. يوصى عمومًا ألا يسمح وقف الخسارة الذي حددته بخسارة الأموال بتجاوز 1٪ إلى 5٪",
   "trailingStopLoss": "وقف الخسارة المتحرك",
   "wheneverThePriceMoves": "عند تحرك السعر لعدد معين من النقاط في الاتجاه المرغوب، يتحرك سعر وقف الخسارة المتحرك أيضًا. بعبارة أخرى، عندما يتحرك السعر في الاتجاه المرغوب، فإن وقف الخسارة المتحرك سوف \"يتتبع\" السعر تلقائيًا. يمكن أن تساعدك هذه الميزة في تأمين الأرباح وإدارة معاملاتك تلقائيًا. على سبيل المثال، يمكنك تحديد أنه كلما ارتفع السعر بمقدار 5 نقاط، سيرتفع وقف الخسارة بمقدار 5 نقاط. عندما لاتتمكن من إدارة التداول في الوقت الفعلي، يمكن أن يساعدك وقف الخسارة المتحرك على إدراك إدارة المركز المذكورة أعلاه تلقائيًا. عندما",
@@ -142,6 +142,7 @@
   "profitTarget": "إن هدف الرب",
   "profitTargetProfitTarget": "إن هدف الربح هو سعر محدد مسبقًا ستغلق عنده صفقتك بشكل مربح. يجب أن تحدد مكان تحديد سعر الربح الخاص بك قبل أن تخطط لفتح صفقة. هدف الربح هو جزء مهم من إدارة الاوامر. طالما أن سعر السوق يصل إلى سعر الربح، فلن تحتاج إلى مراقبة الصفقة بجوار الكمبيوتر، وسيساعدك هدف الربح على إغلاق الصفقة والربح تلقائيًا.",
   "marketOrder": "أمر السوق",
+  "aMarketOrder": "أمر السوق هو المتداول الذي يفتح مركزًا يدويًا وينفذ أمرًا بسعر السوق الحالي القابل للتداول. يميل المتداولون اليوميون وبعض متداولي السكالبينج إلى فتح أوامر السوق للتداول.",
   "pendingOrder": "أمر معلق",
   "aPendingOrder": "الأمر المعلق هو أمر له سعر افتتاح محدد مسبقًا. عندما يصل السوق إلى هذا السعر المحدد مسبقا، سوف يقوم الأمر المعلق بفتح صفقة تلقائيًا. إذا لم تتمكن من مراقبة تقلبات الأسعار أمام جهاز الكمبيوتر الخاص بك لفترة طويلة، فقد تكون الطلبات المعلقة مفيدة جدًا بالنسبة لك. في التداول ضمن النطاق (يتحرك السعر ذهابًا وإيابًا ضمن النطاق) والتداول الاختراقي (يخترق السعر النطاق)، يمكن أيضًا أن تكون الأوامر المعلقة مفيدة جدًا.",
   "typesOfPendingOrders": "أنواع الأوامر المعلقة-",
