--- a/src/i18n/locales/ar/uSShareCFD.json
+++ b/src/i18n/locales/ar/uSShareCFD.json
@@ -2,7 +2,7 @@
   "tradeSharesCFDs": "تداول العقود مقابل الفروقات",
   "WCGOffersAWideRange": "تقدم WCG مجموعة واسعة من أسهم CFD عبر منصتها للتداول عبر الإنترنت. إبدأ التداول الآن للاستفادة من فروق الأسعار التنافسية وتنفيذصفقات عالية الجودة وبدون عمولة. يرجى تذكر أن رأس مالك في خطر",
   "viewTradingProducts": "عرض منتجات التداول",
-  "whyTradeSharesWithWCG": "لماذا تداول الأسهم مع WCG ？",
+  "whyTradeSharesWithWCG": "لماذا تداول الأسهم مع WCG ?",
   "competitivePrices": "أسعار منافسةنحن نحصل على أسعارنا من أماكن متعددة لضمان حصولك على أفضل الأسعار لتداول العقود مقابل الفروقات",
   "tradeShortAndLong": "تاجر بالبيع أو الشراءقم بفتح صفقة شراء أو بيع عند التداول باستخدام العقود مقابل الفروقات وحقق مكاسب محتملة من تحركات الأسعار",
   "tradeShares": "تداول الأسهم  برافعة ماليةاحصل على عرض كامل بإيداع  مبلغ صغير نسبيًا عندما تتداول أسهم عقود الفروقات مع WCG",
