--- a/src/i18n/locales/cn/intermediateTrading.json
+++ b/src/i18n/locales/cn/intermediateTrading.json
@@ -20,7 +20,7 @@
   "onceYouHaveSetUpAVery": "一旦您设置好了一个非常满意的图表，您可以将它保存为模板。最为快捷方便的模板设置方式是，直接在图表上单击鼠标右键，选择「模板」——「保存模板」。您可以设置多个模板以满足不同交易策略的分析需要。",
   "ifYouWantToSetTheMost": "如果您想将最常用的模板设置为默认图表的模板，您可以在图表上单击鼠标右键，选择「模板」——「保存模板」，然后将模板命名为「Default」。",
   "economicCalendar": "财经日历",
-  "soHowCanWeKeepAnEye": "那么，我们该如何对这些潜在的市场推动因素保持关注？尽管我们无法预知世事，但我们可以通过财经日历来监测哪些重要的新闻发布将在未来几天、几周或几个月里进行。",
+  "soHowCanWeKeepAnEye": "那么，我们该如何对这些潜在的市场推动因素保持关注?尽管我们无法预知世事，但我们可以通过财经日历来监测哪些重要的新闻发布将在未来几天、几周或几个月里进行。",
   "theEconomicCalendarLists": "财经日历列出了特定国家公开发布的新闻和事件，这意味着世界各地的人们可以同时获悉同样的新闻。尽管这对我们这样的零售交易者来说是个重大利好，但最好能意识到银行也有一个主要优势——他们能通过看到客户的订单流，看到资金流向哪里（以及从哪里流出）。",
   "customizationOfToolbars": "工具条的个性化定制——MT4平台上共有四个独立的工具条：",
   "common": "-常用",
@@ -82,7 +82,7 @@
   "pleaseRememberThat": "请记住，您的每一笔交易始终伴随着风险——请确保您充分理解您所面对的交易风险，并能够对它泰然处之。",
   "ifYouWantToBecomeATrader": "如果您想成为一位交易者，制定交易策略是至关重要的。在这里，我们将探讨交易策略所包含的一些重要内容。",
   "assessYourSkills": "评价您的技能",
-  "haveYouTestedYourStrategy": "您测试过您的策略了吗？您确信您的策略是有效的吗？您能毫不犹豫地遵循您的策略吗？如果您交易策略还不够完善，那么最好通过测试不断调整，直到您能放心使用您的策略。",
+  "haveYouTestedYourStrategy": "您测试过您的策略了吗?您确信您的策略是有效的吗?您能毫不犹豫地遵循您的策略吗?如果您交易策略还不够完善，那么最好通过测试不断调整，直到您能放心使用您的策略。",
   "psychologicalPreparation": "心理准",
   "tradingCanAffectYourEmotions": "交易会使情绪像坐过山车一样起伏，所以努力让情绪不受干扰显得尤为重要。如果您面临个人压力而无法调节交易带来的挑战，那么最好不要进行交易。如果您在情绪和心理上都准备好了，那么您可以开始进行交易，但是请确保您的帐户内只持有一个单子。",
   "risksManagement": "设置风险等",
@@ -107,7 +107,7 @@
   "whetherItIsProfitOrLoss": "是盈利还是亏损；",
   "openingAndClosingPositions": "开仓和平仓时图表的截图",
   "ifYouWantToBeAConsistent": "如果您想成为一个始终如一的交易者，有一个交易策略是至关重要的——永远不要低估计划的力量。",
-  "whatIsAChartPattern": "什麽是图表形态？",
+  "whatIsAChartPattern": "什麽是图表形态?",
   "inTheMarketBuyersAnd": "在市场中，买卖双方无时不刻在进行力量的博弈，图表是这种博弈结果的记录。人们逐渐在图表上发现了一些典型的图表形态，借助它们，人们可以清晰地看到市场上是买方占优还是卖方强势。而且，随着这些经典形态一次又一次地出现，人们发现市场上总是出现同样的买卖双方力量变化。因此，我们可以借助学习形态的经验来预测后市的走势，这就是形态分析。",
   "typicalChartPatterns": "典型的图表形态包括两类：反转形态和持续形态。在本篇中，我们将通过介绍三种最为常见的图表形态来理解形态分析是如何预测价格走势的，以及人们怎样通过形态分析来做出交易决策。",
   "headAndShoulders": "头肩顶和头肩底",
@@ -142,6 +142,7 @@
   "profitTarget": "盈利目标",
   "profitTargetProfitTarget": "盈利目标是一种预先设定的价格，在此价格上您将盈利平仓。在您打算开设仓位前，您应该确定您的获利价格设在哪里。盈利目标是订单管理的重要组成部分，只要市场价格达到了获利价格，您无需在电脑旁监控仓位，获利会帮助您自动平仓结利。",
   "marketOrder": "市价单",
+  "aMarketOrder": "市价单是由交易者手动开仓，并执行在当前市场的可成交价格上的订单。日内交易者和一些剥头皮交易者更倾向于开设市价单来进行交易。",
   "pendingOrder": "挂单",
   "aPendingOrder": "挂单是有预设的开仓价格的订单，当市场达到预设价格时，挂单会自动开仓。如果您无法长时间在电脑前监视价格波动，那么挂单对您来说会非常有用。在区间交易（价格在一个区间内来回运行）和突破交易（价格突破了区间运行）两种情形下，挂单也会十分有帮助，挂单可分为两种类型。",
   "typesOfPendingOrders": "挂单类型",
