--- a/src/i18n/locales/cn/uSShareCFD.json
+++ b/src/i18n/locales/cn/uSShareCFD.json
@@ -7,7 +7,7 @@
   "tradeShortAndLong": "可进行多空交易您可透过差价合约持有空头或多头头寸，并在股价上升或下跌时均有获利机会。",
   "tradeShares": "通过杠杆交易股票交易者跟WCG交易股票差价合约，只需金额相对少的初始入金，即可获得完整敞口。",
   "WCGOffersZeroCommission": "没有佣金或隐藏费用在WCG交易股票差价合约既是免佣金，也不就交易收取银行手续费，让交易者更有利可图。",
-  "howDoITradeCFDShares": "如何与WCG交易股票差价合约？",
+  "howDoITradeCFDShares": "如何与WCG交易股票差价合约?",
   "whenTradingASingleCFDShare": "当交易单个股票差价合约股票时，相关公司将采取公司行动，例如派发现金股息。当相关公司发放现金股息时，WCG将会对客户的账户作出相应调整，并采取两项行动：",
   "clientsWhoHoldBUY": "在除息日，持有单一股票差价合约多头头寸的客户，将获得相当于股息支付的正现金金额（根据客户的手数和支付股息的目标证券的比例，将资金存入客户的交易账户中）。",
   "ClientsWhoHoldSELL": "在除息日，持有单一股票差价合约空头头寸的客户，将获得相当于股息支付的现金金额（根据客户的手数和支付股息的目标证券的比例，将从客户的交易账户中提取资金）。",
@@ -19,7 +19,7 @@
   "ifACompanyAnnounces": "如果一家公司宣布进行股票分割或反向股票分割，那么该公司的股价将会出现较大变动。",
   "reserveShareSplit": "反向股票分割：差价合约价格将上涨",
   "shareSplit": "股票分割：差价合约价格将下跌",
-  "openPositions": "苹果公司差价合约的未平仓合约。难道不该只说「持有相关差价合约未平仓合约的客户」吗？",
+  "openPositions": "苹果公司差价合约的未平仓合约。难道不该只说「持有相关差价合约未平仓合约的客户」吗?",
   "however": "不过，单一股票CFD也将受到公司行为的影响，当上市公司出现任何业务变化（如股票分割、储备股分拆分和股息支付等）时，可能会发生这种情况，从而可能影响公司的财务状况、其股价表现和股东利益。",
   "dividends": "股息",
   "aListedCompany": "上公司每半年会公布一次业绩（有些是按季度），董事局会在该日宣布是否向股东派发股息。若有股息派发的话，一般以「现金」方式或以送「股分」形式支付股息给股东。",
