--- a/src/i18n/locales/en/advancedTrading.json
+++ b/src/i18n/locales/en/advancedTrading.json
@@ -7,7 +7,7 @@
   "fundamentalAnalysis": "Fundamental analysis",
   "fibonacciRetracementLine": "Fibonacci Retracement Line",
   "supportAndResistance": "Support and resistance",
-  "marketParticipants": "Support and resistance",
+  "marketParticipants": "Market participants",
   "tradingStyle": "Trading style",
   "whatIsTechnical": "What is technical analysis",
   "technicalAnalysisPredicts": "Technical analysis predicts market trends by observing historical prices and formulates trading strategies accordingly. Together with fundamental analysis, they are the two most widely-used analytical tools.",
