--- a/src/i18n/locales/en/iBBroker.json
+++ b/src/i18n/locales/en/iBBroker.json
@@ -24,7 +24,7 @@
   "highlyTransparentAgency": "Highly transparent agency system， all setting items are clear at a glance.",
   "viewCustomerProfile": "View customer profile data",
   "getCustomerTransaction": "Get customer transaction reports， income statements， transaction volume and other statistical data at any time.",
-  "howMuchCanIProfit": "How much can I profit？",
+  "howMuchCanIProfit": "How much can I profit?",
   "accountTypeOfYourClient": "Account type of your client",
   "yourVlientSTransactionVolume": "Your client's transaction volume",
   "commissionPerLot": "Commission per lot",
