--- a/src/i18n/locales/id/iBBroker.json
+++ b/src/i18n/locales/id/iBBroker.json
@@ -24,7 +24,7 @@
   "highlyTransparentAgency": "Sistem agensi yang sangat transparan, semua item pengaturan sekilas terlihat jelas.",
   "viewCustomerProfile": "Lihat data profil pelanggan",
   "getCustomerTransaction": "Dapatkan laporan transaksi pelanggan, laporan laba rugi, volume transaksi dan data statistik lainnya kapan saja.",
-  "howMuchCanIProfit": "Berapa saya bisa untung？",
+  "howMuchCanIProfit": "Berapa saya bisa untung?",
   "accountTypeOfYourClient": "Jenis akun klien Anda",
   "yourVlientSTransactionVolume": "Volume transaksi klien Anda",
   "commissionPerLot": "Komisi per lot",
