--- a/src/i18n/locales/id/intermediateTrading.json
+++ b/src/i18n/locales/id/intermediateTrading.json
@@ -107,7 +107,7 @@
   "whetherItIsProfitOrLoss": "apakah itu untung atau rugi；",
   "openingAndClosingPositions": "posisi pembukaan dan penutupan Screenshot dari grafik waktu.",
   "ifYouWantToBeAConsistent": "Jika Anda ingin menjadi trader yang konsisten， memiliki strategi perdagangan sangat penting - jangan pernah meremehkan kekuatan rencana tersebut",
-  "whatIsAChartPattern": "Apa itu pola grafik？",
+  "whatIsAChartPattern": "Apa itu pola grafik?",
   "inTheMarketBuyersAnd": "Di pasar, pembeli dan penjual memainkan permainan kekuatan sepanjang waktu, dan bagan adalah catatan hasil permainan ini. Orang-orang secara bertahap menemukan beberapa pola grafik yang khas pada grafik. Dengan bantuan mereka, orang dapat melihat dengan jelas apakah pembeli dominan atau penjual kuat di pasar. Selain itu, dengan pola klasik yang muncul berkali-kali ini, orang menemukan bahwa perubahan yang sama pada kekuatan pembeli dan penjual selalu muncul di pasar. Oleh karena itu, kita dapat menggunakan pengalaman pola pembelajaran untuk memprediksi tren prospek pasar. Ini adalah analisis pola.",
   "typicalChartPatterns": "Pola grafik tipikal mencakup dua jenis: pola pembalikan dan pola berkelanjutan. Pada artikel ini, kami akan memperkenalkan tiga pola grafik yang paling umum untuk memahami bagaimana analisis pola memprediksi pergerakan harga, dan bagaimana orang membuat keputusan perdagangan melalui analisis pola.",
   "headAndShoulders": "Kepala dan bahu",
@@ -142,6 +142,7 @@
   "profitTarget": "harga pasar mencapai harga stop loss",
   "profitTargetProfitTarget": "Target laba Target laba adalah harga yang telah ditentukan sebelumnya di mana Anda akan menutup posisi secara menguntungkan. Sebelum Anda berencana untuk membuka posisi, Anda harus menentukan di mana harga keuntungan Anda ditetapkan. Target keuntungan adalah bagian penting dari manajemen pesanan. Selama harga pasar mencapai harga keuntungan, Anda tidak perlu memantau posisi di sebelah komputer, dan keuntungan akan membantu Anda menutup keuntungan secara otomatis.",
   "marketOrder": "Market order",
+  "aMarketOrder": "Market order adalah trader yang secara manual membuka posisi dan mengeksekusi order pada harga pasar yang dapat diperdagangkan saat ini. Pedagang harian dan beberapa pedagang scalping lebih cenderung membuka pesanan pasar untuk berdagang.",
   "pendingOrder": "Order menunggu keputusan",
   "aPendingOrder": "Sebuah pending order adalah order dengan harga pembukaan yang telah ditentukan sebelumnya. Ketika pasar mencapai harga preset, pending order secara otomatis akan membuka posisi. Jika Anda tidak dapat memantau fluktuasi harga di depan komputer Anda untuk waktu yang lama, maka pending order bisa sangat berguna untuk Anda. Dalam perdagangan kisaran (harga bergerak maju mundur dalam suatu kisaran) dan perdagangan breakout (harga menembus kisaran), pending order juga bisa sangat membantu.",
   "typesOfPendingOrders": "Jenis pending order",
