--- a/src/i18n/locales/ms/basicTrading.json
+++ b/src/i18n/locales/ms/basicTrading.json
@@ -3,11 +3,11 @@
   "haventHadExperience": "Anda tidak mempunyai pengalaman dalam perdagangan kewangan ? Kami akan membimbing anda selangkah demi selangkah.",
   "basicTradingCourse": "Kursus perdagangan untuk pemula",
   "intermediateTradingCourse": "Kursus Perdagangan Pertengahan",
-  "whatIsForeignExchangeTrading": "Apakah perdagangan pertukaran wang asing？",
+  "whatIsForeignExchangeTrading": "Apakah perdagangan pertukaran wang asing?",
   "factorsAffectingTheMarket": "Faktor yang mempengaruhi pasaran",
   "basicOperationOfTheMT4Platform": "Operasi asas platform MT4",
   "leverageAndMargin": "Leverage dan margin",
-  "whatIsACFDTransaction": "Apakah perdagangan pertukaran wang asing？",
+  "whatIsACFDTransaction": "Apakah perdagangan CFD?",
   "step1": "Langkah pertama: Memohon akaun sebenar",
   "weOfferTo": "Kami menawarkan untuk memperdagangkan pelbagai produk kewangan global. Anda hanya perlu mengisi dan mengirimkan borang permohonan pembukaan akaun secara dalam talian dan memuat naik dokumen yang diperlukan, kami akan menyemak permohonan anda dalam waktu sesingkat mungkin dan mengirimkan maklumat akaun transaksi kepada anda melalui emel.",
   "applyForARealAccountNow": "Memohon akaun sebenar sekarang",
@@ -121,10 +121,10 @@
   "energy": "-- Tenaga",
   "preciousMetals": "- Logam berharga",
   "contractDetails": "- Perincian Kontrak",
-  "WhatAreTheDifferentTypes": "Apakah pelbagai jenis aset pendasar CFD？",
+  "WhatAreTheDifferentTypes": "Apakah pelbagai jenis aset pendasar CFD?",
   "aStockIndexAsAFinancial": "Indeks saham adalah aset kewangan yang mewakili nilai bahagian tertentu saham di pasaran saham. Sebagai contoh, salah satu indeks saham yang paling popular, Standard & Poor's 500, mewakili prestasi keseluruhan 500 syarikat terkemuka yang diperdagangkan secara terbuka di pasaran saham US. Sekiranya anda memperdagangkan CFD S&P 500 melalui WCG, anda boleh memutuskan sama ada membuka posisi beli atau jual dengan membuat spekulasi sama ada indeks akan naik atau turun. WCG juga menyediakan perdagangan CFD pada indeks saham terkenal lain, termasuk Indeks FTSE UK (UK100), Indeks Dow Jones 30 AS (US30), Indeks 100 Nasdaq AS (NAS100), Indeks CAC 40 Perancis (FRA40), dan Eropah Indeks Stoxx 50 (ESTX50), Indeks DAX Jerman (GER30), Indeks Nikkei 225 (JPN225) dan Indeks ASX 200 Australia (AUS200).",
   "commodityFuturesAreAlso": "Commodity futures juga merupakan sejenis aset kewangan. Ini mewakili perjanjian untuk membeli atau menjual sejumlah komoditi tertentu, seperti platinum, tembaga atau minyak mentah pada tarikh dan harga yang telah ditentukan. Oleh kerana harga komoditi selalu berubah-ubah dengan perubahan penawaran dan permintaan, pedagang dapat membuat spekulasi mengenai turun naik harga mereka dengan membeli dan menjual commodity futures. Sekiranya anda berdagang CFD platinum melalui WCG, anda boleh meramalkan sama ada harga platinum akan naik atau turun pada masa akan datang dan memutuskan sama ada untuk membuka pesanan beli atau jual. CFD komoditi yang disediakan oleh WCG juga merangkumi tembaga dan minyak mentah (minyak mentah Texas ringan WTI dan minyak mentah BRENT). ",
   "byOpeningAnAccountThrough": "Dengan membuka akaun melalui WCG, anda boleh memperdagangkan pertukaran mata wang asing dan indeks saham atau CFD komoditi pada platform dan akaun yang sama. Anda akan dapat bergerak bebas antara pasaran pertukaran asing dan pasaran CFD yang berbeza, membuka dan menutup posisi dengan tepat. ",
-  "whatAreTheAdvantages": "Apakah kelebihan perdagangan CFD？",
+  "whatAreTheAdvantages": "Apakah kelebihan perdagangan CFD?",
   "theMostSignificantAdvantage": "Kelebihan yang paling ketara dalam perdagangan CFD adalah anda boleh menggunakan leverage sehingga 100 kali, yang bermaksud anda dapat membuka transaksi yang lebih besar dengan modal permulaan yang lebih rendah dan kos transaksi yang agak kecil. Perlu diperhatikan bahawa walaupun leverage dapat meningkatkan keuntungan, ia juga akan meningkatkan kerugian. Oleh itu, anda perlu menggunakan strategi pengurusan risiko yang sesuai ketika berdagang CFD dengan leverage. CFD juga menyokong perdagangan dua hala, sama ada bear atau bull market, anda boleh membeli dan menjual secara bebas dan sepanjang proses anda tidak akan dikenakan komisen atau yuran pembiayaan. Berdagang semua produk dalam satu akaun dan manfaatkan sepenuhnya pelbagai peluang perdagangan yang disediakan oleh WCG kepada anda. "
 }
