--- a/src/i18n/locales/ms/iBBroker.json
+++ b/src/i18n/locales/ms/iBBroker.json
@@ -24,7 +24,7 @@
   "highlyTransparentAgency": "Sistem agensi yang sangat telus, semua barangan tetapan jelas secara sekilas.",
   "viewCustomerProfile": "Lihat data profil pelanggan",
   "getCustomerTransaction": "Dapatkan laporan transaksi pelanggan, penyata pendapatan, jumlah transaksi dan data statistik lain pada bila-bila masa.",
-  "howMuchCanIProfit": "Berapa banyak yang boleh saya untung？",
+  "howMuchCanIProfit": "Berapa banyak yang boleh saya untung?",
   "accountTypeOfYourClient": "Jenis akaun pelanggan anda",
   "yourVlientSTransactionVolume": "Jumlah urus niaga pelanggan anda",
   "commissionPerLot": "Komisen per lot",
