--- a/src/i18n/locales/ms/platform.json
+++ b/src/i18n/locales/ms/platform.json
@@ -27,7 +27,7 @@
   "supportMultipleWindows": "Menyokong pelbagai tetingkap",
   "simpleChartingOperation": "Operasi membuat peta sederhana",
   "nineChartingTimePeriods": "Sembilan tempoh masa carta",
-  "whyChoose": "Mengapa memilih platform MetaTrader4？",
+  "whyChoose": "Mengapa memilih platform MetaTrader4?",
   "MT4IsTheMostPopularForeign": "MT4 adalah platform perdagangan pertukaran wang asing yang paling popular di dunia. Ia telah memenangi pelbagai anugerah",
   "itHasWonVariousAwards": "Platform ini mempunyai 3 jenis carta yang berbeza, 9 jangka masa, 39 bahasa",
   "moreThan50Preset": "lebih daripada 50 petunjuk teknikal yang telah ditetapkan dan interface yang dapat disesuaikan sepenuhnya",
