--- a/src/i18n/locales/vi/intermediateTrading.json
+++ b/src/i18n/locales/vi/intermediateTrading.json
@@ -107,7 +107,7 @@
   "whetherItIsProfitOrLoss": "cho dù đó là lãi hay lỗ;",
   "openingAndClosingPositions": "các vị trí mở và đóng Ảnh chụp màn hình biểu đồ thời gian.",
   "ifYouWantToBeAConsistent": "Nếu bạn muốn trở thành một nhà giao dịch kiên định, việc có một chiến lược giao dịch là điều tối quan trọng - đừng bao giờ đánh giá thấp sức mạnh của kế hoạch.",
-  "whatIsAChartPattern": "Mô hình giá là gì？",
+  "whatIsAChartPattern": "Mô hình giá là gì?",
   "inTheMarketBuyersAnd": "Trên thị trường, người mua và người bán đang chơi trò chơi quyền lực mọi lúc, và biểu đồ chứng khoán (mô hình giá) là bản ghi kết quả của giao dịch này. Người ta dần tìm ra một số mẫu biểu đồ tiêu biểu trên các biểu đồ. Với sự giúp đỡ của biểu đồ, mọi người có thể thấy rõ người mua đang chiếm ưu thế hay người bán đang có thế mạnh trên thị trường. Hơn nữa, với những mẫu cổ điển này xuất hiện lặp đi lặp lại, người ta thấy rằng những thay đổi giống nhau về quyền lực của người mua và người bán luôn xuất hiện trên thị trường. Do đó, chúng ta có thể sử dụng kinh nghiệm học các mẫu hình này để dự đoán xu hướng của triển vọng thị trường. Đây là phân tích mẫu.",
   "typicalChartPatterns": "Các mẫu biểu đồ điển hình bao gồm có hai loại: mẫu đảo chiều và mẫu liên tục. Trong bài viết này, chúng tôi sẽ giới thiệu ba mẫu biểu đồ phổ biến nhất để hiểu cách phân tích mẫu dự đoán biến động giá và cách mọi người đưa ra quyết định giao dịch thông qua phân tích mẫu.",
   "headAndShoulders": "Mô hình: Đầu - Vai",
@@ -142,6 +142,7 @@
   "profitTarget": "Mục tiêu lợi nhuận",
   "profitTargetProfitTarget": "Mục tiêu lợi nhuận là mức giá đặt trước mà bạn sẽ đóng vị thế của mình một cách có lãi. Trước khi dự định mở một vị thế, bạn nên xác định nơi đặt giá lợi nhuận của mình. Mục tiêu lợi nhuận là một phần quan trọng của quản lý đơn hàng. Chỉ cần giá thị trường đạt đến giá lợi nhuận, bạn không cần theo dõi vị trí bên cạnh máy tính, lợi nhuận sẽ giúp bạn tự động chốt lời.",
   "marketOrder": "Lệnh thị trường",
+  "aMarketOrder": "Lệnh thị trường là một nhà giao dịch mở một vị trí theo cách thủ công và thực hiện một lệnh ở mức giá giao dịch thị trường hiện tại. Các nhà giao dịch trong ngày và một số nhà giao dịch theo tỷ lệ có xu hướng mở các lệnh thị trường để giao dịch.",
   "pendingOrder": "Danh sách các lệnh chờ xử lý",
   "aPendingOrder": "Lệnh đang chờ xử lý là lệnh có giá mở cửa đặt trước. Khi thị trường đạt đến mức giá đặt trước, một lệnh đang chờ xử lý sẽ tự động mở một vị thế. Nếu bạn không thể theo dõi biến động giá trước máy tính trong một thời gian dài, thì các lệnh chờ xử lý có thể rất hữu ích cho bạn. Trong giao dịch phạm vi (giá di chuyển qua lại trong một phạm vi) và giao dịch đột phá (giá phá vỡ phạm vi), các lệnh đang chờ xử lý cũng có thể rất hữu ích.",
   "typesOfPendingOrders": "Các loại lệnh đang chờ xử lý",
