--- a/src/i18n/locales/zh/iBBroker.json
+++ b/src/i18n/locales/zh/iBBroker.json
@@ -24,7 +24,7 @@
   "highlyTransparentAgency": "高度透明的代理制度，所有設定項目一目了然。",
   "viewCustomerProfile": "檢視客戶資料數據",
   "getCustomerTransaction": "隨時獲取客戶交易報告和收入報表、交易量等統計數據。",
-  "howMuchCanIProfit": "我能獲利多少？",
+  "howMuchCanIProfit": "我能獲利多少?",
   "accountTypeOfYourClient": "您客戶的帳戶類型",
   "yourVlientSTransactionVolume": "您客戶的交易量",
   "commissionPerLot": "每一手傭金",
