--- a/src/i18n/locales/zh/intermediateTrading.json
+++ b/src/i18n/locales/zh/intermediateTrading.json
@@ -20,7 +20,7 @@
   "onceYouHaveSetUpAVery": "一旦您設置好了一個非常滿意的圖表，您可以將它保存為模板。最為快捷方便的模板設置方式是，直接在圖表上單擊滑鼠右鍵，選擇「模板」——「保存模板」。您可以設置多個模板以滿足不同交易策略的分析需要。",
   "ifYouWantToSetTheMost": "如果您想將最常用的模板設置為默認圖表的模板，您可以在圖表上單擊滑鼠右鍵，選擇「模板」——「保存模板」，然後將模板命名為「Default」。",
   "economicCalendar": "財經日曆",
-  "soHowCanWeKeepAnEye": "那麼，我們該如何對這些潛在的市場推動因素保持關注？儘管我們無法預知世事，但我們可以通過財經日曆來監測哪些重要的新聞發佈將在未來幾天、幾週或幾個月里進行。",
+  "soHowCanWeKeepAnEye": "那麼，我們該如何對這些潛在的市場推動因素保持關注?儘管我們無法預知世事，但我們可以通過財經日曆來監測哪些重要的新聞發佈將在未來幾天、幾週或幾個月里進行。",
   "theEconomicCalendarLists": "財經日曆列出了特定國家公開發佈的新聞和事件，這意味著世界各地的人們可以同時獲悉同樣的新聞。儘管這對我們這樣的零售交易者來說是個重大利好，但最好能意識到銀行也有一個主要優勢——他們能通過看到客戶的訂單流，看到資金流向哪裡（以及從哪裡流出）。",
   "customizationOfToolbars": "工具條的個性化定制——MT4平台上共有四個獨立的工具條：",
   "common": "-常用",
@@ -82,7 +82,7 @@
   "pleaseRememberThat": "請記住，您的每一筆交易始終伴隨著風險——請確保您充分理解您所面對的交易風險，并能夠對它泰然處之。",
   "ifYouWantToBecomeATrader": "如果您想成為一位交易者，制定交易策略是至關重要的。在這裡，我們將探討交易策略所包含的一些重要內容。",
   "assessYourSkills": "評估您的技能",
-  "haveYouTestedYourStrategy": "您測試過您的策略了嗎？您確信您的策略是有效的嗎？您能毫不猶豫地遵循您的策略嗎？如果您交易策略還不夠完善，那麼最好通過測試不斷調整，直到您能放心使用您的策略。",
+  "haveYouTestedYourStrategy": "您測試過您的策略了嗎?您確信您的策略是有效的嗎?您能毫不猶豫地遵循您的策略嗎?如果您交易策略還不夠完善，那麼最好通過測試不斷調整，直到您能放心使用您的策略。",
   "psychologicalPreparation": "心理准",
   "tradingCanAffectYourEmotions": "交易會使情緒像坐過山車一樣起伏，所以努力讓情緒不受干擾顯得尤為重要。如果您面臨個人壓力而無法適應交易帶來的挑戰，那麼最好不要進行交易。如果您在情緒和心理上都准備好了，那麼您可以開始進行交易，但是請確保您的帳戶內只持有一個單子。",
   "risksManagement": "設置風險等",
@@ -107,7 +107,7 @@
   "whetherItIsProfitOrLoss": "是盈利還是虧損；",
   "openingAndClosingPositions": "開倉和平倉時圖表的截圖。",
   "ifYouWantToBeAConsistent": "如果您想成為一個始終如一的交易者，有一個交易策略是至關重要的——永遠不要低估計劃的力量。",
-  "whatIsAChartPattern": "什麽是圖表形態？",
+  "whatIsAChartPattern": "什麽是圖表形態?",
   "inTheMarketBuyersAnd": "在市場中，買賣雙方無時不刻在進行力量的博弈，圖表是這種博弈結果的記錄。人們逐漸在圖表上發現了一些典型的圖表形態，借助它們，人們可以清晰地看到市場上是買方占優還是賣方強勢。而且，隨著這些經典形態一次又一次地出現，人們發現市場上總是出現同樣的買賣雙方力量變化。因此，我們可以借助學習形態的經驗來預測後市的走勢，這就是形態分析。",
   "typicalChartPatterns": "典型的圖表形態包括兩類：反轉形態和持續形態。在本篇中，我們將通過介紹三種最為常見的圖表形態來理解形態分析是如何預測價格走勢的，以及人們怎樣通過形態分析來做出交易決策。",
   "headAndShoulders": "頭肩頂和頭肩底",
@@ -142,6 +142,7 @@
   "profitTarget": "盈利目標",
   "profitTargetProfitTarget": "盈利目標是一種預先設定的價格，在此價格上您將盈利平倉。在您打算開設倉位前，您應該確定您的獲利價格設在哪裡。盈利目標是訂單管理的重要組成部分，只要市場價格達到了獲利價格，您無需在電腦旁監控倉位，獲利會幫助您自動平倉結利。",
   "marketOrder": "市價單",
+  "aMarketOrder": "市價單是由交易者手動開倉，並執行在當前市場的可成交價格上的訂單。日內交易者和一些剝頭皮交易者更傾向於開設市價單來進行交易。",
   "pendingOrder": "掛單",
   "aPendingOrder": "掛單是有預設的開倉價格的訂單，當市場達到預設價格時，掛單會自動開倉。如果您無法長時間在電腦前監視價格波動，那麼掛單對您來說會非常有用。在區間交易（價格在一個區間內來回運行）和突破交易（價格突破了區間運行）兩種情形下，掛單也會十分有幫助，掛單可分為兩種類型。",
   "typesOfPendingOrders": "掛單類型",
