--- a/src/i18n/locales/zh/platform.json
+++ b/src/i18n/locales/zh/platform.json
@@ -27,7 +27,7 @@
   "supportMultipleWindows": "支援多重視窗",
   "simpleChartingOperation": "圖表操作簡易",
   "nineChartingTimePeriods": "九個價格時段",
-  "whyChoose": "為何選用MetaTrader 4平台？",
+  "whyChoose": "為何選用MetaTrader 4平台?",
   "MT4IsTheMostPopularForeign": "MT4是全球最受歡迎的外匯交易平台，屢獲各式獎項",
   "itHasWonVariousAwards": "平台有3種不同的圖表類型、9種時段範圍、39種語言",
   "moreThan50Preset": "50多項預設的技術指標及可完全定製化的介面",
