--- a/src/i18n/locales/ar/iBBroker.json
+++ b/src/i18n/locales/ar/iBBroker.json
@@ -24,7 +24,7 @@
   "highlyTransparentAgency": "نظام وكالة عالي الشفافية، كل عناصر الإعداد واضحة في لمحة.",
   "viewCustomerProfile": "عرض بيانات الملف الشخصي للعميل",
   "getCustomerTransaction": "احصل على تقارير معاملات العملاء وبيانات الدخل وحجم المعاملات والبيانات الإحصائية الأخرى في أي وقت.",
-  "howMuchCanIProfit": "كم يمكنني أن أربح؟ ？",
+  "howMuchCanIProfit": "كم يمكنني أن أربح؟ ?",
   "accountTypeOfYourClient": "نوع حساب العميل الخاص بك",
   "yourVlientSTransactionVolume": "حجم المعاملات الخاصة بعميلك",
   "commissionPerLot": "العمولة لكل لوت",
