--- a/src/i18n/locales/cn/iBBroker.json
+++ b/src/i18n/locales/cn/iBBroker.json
@@ -24,7 +24,7 @@
   "highlyTransparentAgency": "高度透明的代理制度，所有设定项目一目了然。",
   "viewCustomerProfile": "检视客户资料数据",
   "getCustomerTransaction": "随时获取客户交易报告和收入报表、交易量等统计数据。",
-  "howMuchCanIProfit": "我能获利多少？",
+  "howMuchCanIProfit": "我能获利多少?",
   "accountTypeOfYourClient": "您客户的帐户类型",
   "yourVlientSTransactionVolume": "您客户的交易量",
   "commissionPerLot": "每一手佣金",
