--- a/src/i18n/locales/zh/basicTrading.json
+++ b/src/i18n/locales/zh/basicTrading.json
@@ -1,6 +1,6 @@
 {
   "howToStartTrading": "如何開始進行交易",
-  "haventHadExperience": "還未擁有金融交易的經驗？我們將一步步地指導您開始進行交易。",
+  "haventHadExperience": "還未擁有金融交易的經驗?我們將一步步地指導您開始進行交易。",
   "basicTradingCourse": "初級交易課程",
   "intermediateTradingCourse": "中級交易課程",
   "whatIsForeignExchangeTrading": "什麼是外匯交易",
@@ -39,7 +39,7 @@
   "differentCurrency": "不同的貨幣組合代表了一種貨幣兌另一種貨幣的價值，這種關係是用一個價格來表示的。在外匯市場上，結合兩國經濟和政治的現狀和預期，貨幣對價格實際上是一種貨幣以另一種貨幣衡量的市場預期值。從股票的角度看，貨幣對的價格機制與股票價格相似。",
   "comparedWithOtherMarkets": "與其他市場相比",
   "theDailyTradingVolume": "股票市場的日交易量約數十億美元，而外匯市場的日交易量高達5萬億美元。外匯市場的參與者包括大型銀行、對沖基金和其他金融機構、全球企業以及個人交易者。大多數外匯交易都是全球日常貿易所涉及的貨幣兌換所帶來的結果。外匯市場的巨額日交易量提供了無盡的交易機會，同時也讓交易者得以通過全球外匯市場進行更加多元化的投資。",
-  "whatFactorsPlayAKeyRole": "在外匯交易中，哪些因素起到關鍵作用？與股票相比又如何？讓我們舉例來說明。假設一個國家的通脹率或銀行利率既低又穩定，它的經濟產出增長強勁，它的政治也非常穩定。人們可以預期，相對于另一個基本面情況不太好的國家貨幣來說，該國貨幣會保持強勁。",
+  "whatFactorsPlayAKeyRole": "在外匯交易中，哪些因素起到關鍵作用?與股票相比又如何?讓我們舉例來說明。假設一個國家的通脹率或銀行利率既低又穩定，它的經濟產出增長強勁，它的政治也非常穩定。人們可以預期，相對于另一個基本面情況不太好的國家貨幣來說，該國貨幣會保持強勁。",
   "LetsTakeAnotherExample": "我們再舉個股票的例子進行對比。假設國內和全球經濟表現強勁，通貨膨脹並不嚴重，市場競爭沒有削弱公司產品的市場佔有率，產品需求穩定，工人生產效率高，那麼您可以預期，相比起其他基本面情況不太好的公司來說，該公司的股票會保持強勁。",
   "similarToStocks": "我與股票相似，在外匯貨幣對的短期走勢中，會受一些其他因素的影響，包括技術分析、短期的供給和需求、季節性資本流動模式、當前的價格等等，這些因素普遍處在動態變化當中，造成貨幣價格實時的上漲或下跌。",
   "earlierWeIntroducedYou": "前面我們為您介紹了外匯市場有哪些參與者，現在我們將繼續為您介紹市場價格變動的常見原因。",
@@ -54,7 +54,7 @@
   "nonFarmPayroll": "非農就業人數和失業率",
   "theMostInfluentialMarketData": "最受市場關注的新聞是美國非農就業人數和失業率，該數據的發佈可能會給市場帶來大量波動。觀看下面的網絡研討會，深入了解為什麼這是一個重要的新聞事件。",
   "economicCalendar": "財經日曆",
-  "soHowCanWeKeepAnEyeOn": "那麼，我們該如何對這些潛在的市場推動因素保持關注？儘管我們無法預知世事，但我們可以通過財經日曆來監測哪些重要的新聞發佈將在未來幾天、幾週或幾個月里進行。",
+  "soHowCanWeKeepAnEyeOn": "那麼，我們該如何對這些潛在的市場推動因素保持關注?儘管我們無法預知世事，但我們可以通過財經日曆來監測哪些重要的新聞發佈將在未來幾天、幾週或幾個月里進行。",
   "theEconomicCalendarListsTheNews": "財經日曆列出了特定國家公開發佈的新聞和事件，這意味著世界各地的人們可以同時獲悉同樣的新聞。儘管這對我們這樣的零售交易者來說是個重大利好，但最好能意識到銀行也有一個主要優勢——他們能通過看到客戶的訂單流，看到資金流向哪裡（以及從哪裡流出）。",
   "marketSentiment": "市場情緒",
   "marketSentimentCanBeUsedBy": "市場情緒可以同時為長線和短線交易者所用。對於長線交易者，他們更傾向于觀察數據在數週或數月內的趨勢，并將其與相關貨幣對的價格進行比較。",
@@ -121,10 +121,10 @@
   "energy": "- 能源",
   "preciousMetals": "- 貴金屬",
   "contractDetails": "- 合約細則",
-  "WhatAreTheDifferentTypes": "差價合約的基礎資產有哪些不同類型？",
+  "WhatAreTheDifferentTypes": "差價合約的基礎資產有哪些不同類型?",
   "aStockIndexAsAFinancial": "股票指數是一種代表了股票市場中特定一部分股票價值的金融資產。例如，最流行的股票指數之一，標準普爾500，代表了領先的500家公司在美國股票市場公開交易的總體表現。如果您通過WCG交易標普500差價合約，您可以通過預測該指數會上漲或下跌，來決定是開買單還是賣單。WCG還提供其他著名股票指數的差價合約交易，包括英國富時指數（UK100）、美國道瓊斯30指數（US30）、美國納斯達克100指數（NAS100）、法國CAC 40指數（FRA40）、歐洲斯托克50指數（ESTX50）、德國DAX指數（GER30）、日經225指數（JPN225）和澳大利亞ASX 200指數（AUS200）。",
   "commodityFuturesAreAlso": "大宗商品期貨也是一種金融資產，它代表了一種協議，即以預先確定的日期和價格買進或賣出一定數量的某種大宗商品，例如白金、銅或原油。由於大宗商品的價格總是隨著供求關係的變化而波動，交易者可以通過買賣大宗商品期貨來對其價格波動進行投機。如果您通過WCG交易白金差價合約，您可以預測白金在未來的價格會上漲還是下跌，從而決定是開買單還是賣單。WCG提供的大宗商品差價合約還包括銅和原油（德克薩斯輕質原油WTI和布倫特BRENT原油）。",
   "byOpeningAnAccountThrough": "通過WCG開戶，您可以在同一個平台、同一個帳戶上交易外匯以及股指或大宗商品差價合約。您將可以自如地穿梭于外匯市場和不同的差價合約市場中，并精確、高速地執行開倉和平倉操作。",
-  "whatAreTheAdvantages": "差價合約交易有哪些優勢？",
+  "whatAreTheAdvantages": "差價合約交易有哪些優勢?",
   "theMostSignificantAdvantage": "交易差價合約最為顯著的好處是，您可以使用高達100倍的槓桿，這意味著您能以更低的啟動資金以及相對較小的交易成本來開設更大金額的交易。需要注意的是，儘管槓桿可以放大盈利，它同時也會放大虧損，因此在進行差價合約的槓桿交易時，您需要採取合適的風險管理策略。差價合約還支持雙向交易，無論是熊市還是牛市，您都可以買賣自如，整個過程中WCG不會收取任何佣金或融資費用。在一個帳戶上交易所有產品，充分利用WCG為您提供的多重交易機會。"
 }
