--- a/src/i18n/locales/zh/uSShareCFD.json
+++ b/src/i18n/locales/zh/uSShareCFD.json
@@ -7,7 +7,7 @@
   "tradeShortAndLong": "可進行多空交易您可透過差價合約持有空頭或多頭頭寸，並在股價上升或下跌時均有獲利機會。",
   "tradeShares": "通過槓桿交易股票交易者跟WCG交易股票差價合約，只需金額相對少的初始入金，即可獲得完整敞口。",
   "WCGOffersZeroCommission": "沒有傭金或隱藏費用在WCG交易股票差價合約既是免傭金，也不就交易收取銀行手續費，讓交易者更有利可圖。",
-  "howDoITradeCFDShares": "如何與WCG交易股票差價合約？",
+  "howDoITradeCFDShares": "如何與WCG交易股票差價合約?",
   "whenTradingASingleCFDShare": "當交易單個股票差價合約股票時，相關公司將采取公司行動，例如派发現金股息。當相關公司发放現金股息時，WCG將會對客戶的帳戶作出相應調整，並采取兩項行動：",
   "clientsWhoHoldBUY": "在除息日，持有單一股票差價合約多頭頭寸的客戶，將獲得相當於股息支付的正現金金額（根據客戶的手數和支付股息的目標證券的比例，將資金存入客戶的交易帳戶中）。",
   "ClientsWhoHoldSELL": "在除息日，持有單一股票差價合約空頭頭寸的客戶，將獲得相當於股息支付的現金金額（根據客戶的手數和支付股息的目標證券的比例，將從客戶的交易帳戶中提取資金）。",
@@ -19,7 +19,7 @@
   "ifACompanyAnnounces": "如果一家公司宣布進行股票分割或反向股票分割，那麽該公司的股價將會出現較大變動。",
   "reserveShareSplit": "反向股票分割：差價合約價格將上漲",
   "shareSplit": "股票分割：差價合約價格將下跌",
-  "openPositions": "蘋果公司差價合約的未平倉合約。難道不該只說「持有相關差價合約未平倉合約的客戶」嗎？",
+  "openPositions": "蘋果公司差價合約的未平倉合約。難道不該只說「持有相關差價合約未平倉合約的客戶」嗎?",
   "however": "不過，單一股票CFD也將受到公司行為的影響，當上市公司出現任何業務變化（如股票分割、儲備股分拆分和股息支付等）時，可能會发生這種情況，從而可能影響公司的財務狀況、其股價表現和股東利益。",
   "dividends": "股息",
   "aListedCompany": "上公司每半年會公布一次業績（有些是按季度），董事局會在該日宣布是否向股東派发股息。若有股息派发的話，一般以「現金」方式或以送「股分」形式支付股息給股東。",
