--- a/src/i18n/locales/ms/contactUs.json
+++ b/src/i18n/locales/ms/contactUs.json
@@ -25,5 +25,9 @@
   "leaveAMessage": "tinggalkan pesanan",
   "iAgreeTo": "Saya bersetuju untuk menyerahkan maklumat saya ke WCG. Untuk maklumat mengenai produk dan tawaran promosi lain, saya boleh dihubungi melalui e-mel atau telefon. Saya telah membaca dan bersetuju dengan dasar privasi WCG.Anda boleh memilih untuk menolak untuk menerima komunikasi pemasaran kami pada bila-bila masa.",
   "submit": "Hantarkan borang pertanyaan",
-  "weWillContactYou": "Kami akan menghubungi anda secepat mungkin"
+  "weWillContactYou": "Kami akan menghubungi anda secepat mungkin",
+  "tooShort": "Too short",
+  "tooLong": "Too long",
+  "invalidFormat": "Invalid format",
+  "required": "Required"
 }
