--- a/src/i18n/locales/ar/questions.json
+++ b/src/i18n/locales/ar/questions.json
@@ -4,8 +4,9 @@
   "whatKindOfSupervision": "ما هو نوع الإشراف الذي تخضع له WCG ?",
   "WCGMarketsLtdIsRegistered": "WCG Markets Ltd مسجلة بموجب قانون الأعمال الدولي وتخضع لرقابة هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) ، برقم 26087 قبل الميلاد 2020.",
   "WCGMarketsLtdIsSupervised": "يشرف على WCG Markets Ltd وحدة الاستخبارات المالية الكندية (FIU) والمركز الكندي لتحليل المعاملات المالية والتقارير (FINTRAC). رقم ترخيص MSB هو M20282836.",
-  "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd مرخصة وتشرف عليها بورصة هونغ كونغ للذهب والفضة (CGSE) ، وهي عضو رقم 12 A1. WCG هي شركة ذات مسؤولية محدودة تأسست في المملكة المتحدة برقم 11019948.",
-  "HowToOpenAnAccountInWCG": "كيفية فتح حساب في WCG ?",
+  "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd مرخصة وتشرف عليها بورصة هونغ كونغ للذهب والفضة (CGSE) ، وهي عضو رقم 12 A1.",
+  "WCGIsALimitedLiabilityCompany": "WCG هي شركة ذات مسؤولية محدودة تأسست في المملكة المتحدة برقم 11019948",
+  "HowToOpenAnAccountInWCG": "كيفية فتح حساب في WCG?",
   "youCanRegisterYourRealAccount": "يمكنك تسجيل حسابك الحقيقي على الموقع الرسمي لـ WCG، أو انقر هنا للتسجيل",
   "whatKindOfAccounts": "ما نوع الحسابات التي توفرها المنصة ?",
   "weProvideDifferentAccountTypes": "نحن نقدم أنواع حسابات مختلفة، الرجاء الاتصال بموظفي خدمة العملاء للحصول على التفاصيل",
