style(about): fix about i18n

--- a/src/i18n/locales/ar/about.json
+++ b/src/i18n/locales/ar/about.json
@@ -4,7 +4,7 @@
   "registerARealAccountNow": "قم بالتسجيل لحساب حقيقي الآن",
   "registerADemoAccountNow": "قم بالتسجيل لحساب تجريبي الآن",
   "strictlyRegulatedAndTrustworthy": "تتبع تنظيمات صارمة وجديرة بالثقة",
-  "WCGInternational": "WCG International هي علامة تجارية استثمارية مالية مهنية تأسست في سانت فينسنت والغرينادين، وتخضع لقوانين وأنظمة صارمة، ومسجلة وفقًا لقانون الشركات التجارية الدولية (BCN: 25293 BC 2019) ، ولديها لوائح صارمة لحماية مصالح المستثمرين.",
+  "WCGInternational": "WCG Markets Ltd هي علامة تجارية استثمارية مالية مهنية تأسست في سانت فينسنت والغرينادين، وتخضع لقوانين وأنظمة صارمة، ومسجلة وفقًا لقانون الشركات التجارية الدولية (BCN: 25293 BC 2019) ، ولديها لوائح صارمة لحماية مصالح المستثمرين.",
   "tradingProducts": "منتجات التداول",
   "tradingPlatform": "منصة التداول",
   "platformHasWonManyAwards": "المنصة فازت بالعديد من الجوائز",
