--- a/src/i18n/locales/cn/about.json
+++ b/src/i18n/locales/cn/about.json
@@ -4,7 +4,7 @@
   "registerARealAccountNow": "立即注册真实账户",
   "registerADemoAccountNow": "立即注册模拟账户",
   "strictlyRegulatedAndTrustworthy": "严格监管，值得信赖",
-  "WCGInternational": "WCG国际有限公司为专业金融投资品牌，于圣文森和格林纳丁斯成立，受其严谨的法律及法规监管，同时依据国际商业公司法注册（BCN:25293 BC 2019），严格的规范以保障投资者的利益。",
+  "WCGInternational": "WCG Markets Ltd 为专业金融投资品牌，于圣文森和格林纳丁斯成立，受其严谨的法律及法规监管，同时依据国际商业公司法注册（BCN:25293 BC 2019），严格的规范以保障投资者的利益。",
   "tradingProducts": "交易产品",
   "tradingPlatform": "交易平台",
   "platformHasWonManyAwards": "平台屡获殊荣",
