--- a/src/i18n/locales/en/about.json
+++ b/src/i18n/locales/en/about.json
@@ -4,7 +4,7 @@
   "registerARealAccountNow": "Register a real account now",
   "registerADemoAccountNow": "Register a demo account now",
   "strictlyRegulatedAndTrustworthy": "Strictly regulated and trustworthy",
-  "WCGInternational": "WCG International is a professional financial investment brand established in Saint Vincent and the Grenadines, subject to strict laws and regulations, and registered in accordance with the International Business Company Law (BCN: 25293 BC 2019), They have strict regulations to protect the interests of investors.",
+  "WCGInternational": "WCG Markets Ltd is a professional financial investment brand established in Saint Vincent and the Grenadines, subject to strict laws and regulations, and registered in accordance with the International Business Company Law (BCN: 25293 BC 2019), They have strict regulations to protect the interests of investors.",
   "tradingProducts": "Trading products",
   "tradingPlatform": "Trading platform",
   "platformHasWonManyAwards": "Platform has won many awards",
