--- a/src/i18n/locales/ms/about.json
+++ b/src/i18n/locales/ms/about.json
@@ -4,7 +4,7 @@
   "registerARealAccountNow": "Daftar akaun sebenar sekarang",
   "registerADemoAccountNow": "Daftar akaun demo sekarang",
   "strictlyRegulatedAndTrustworthy": "Teratur dan boleh dipercayai",
-  "WCGInternational": "WCG International adalah jenama pelaburan kewangan profesional yang ditubuhkan di Saint Vincent dan Grenadines, tertakluk kepada undang-undang dan peraturan yang ketat, dan didaftarkan sesuai dengan Undang-undang Syarikat Perniagaan Antarabangsa (BCN: 25293 BC 2019), Mereka mempunyai peraturan yang ketat untuk melindungi kepentingan pelabur.",
+  "WCGInternational": "WCG Markets Ltd adalah jenama pelaburan kewangan profesional yang ditubuhkan di Saint Vincent dan Grenadines, tertakluk kepada undang-undang dan peraturan yang ketat, dan didaftarkan sesuai dengan Undang-undang Syarikat Perniagaan Antarabangsa (BCN: 25293 BC 2019), Mereka mempunyai peraturan yang ketat untuk melindungi kepentingan pelabur.",
   "tradingProducts": "Produk dagangan",
   "tradingPlatform": "Platform dagangan",
   "platformHasWonManyAwards": "Platform telah memenangi banyak anugerah",
