style(about): fix i18n wording again

--- a/src/i18n/locales/cn/about.json
+++ b/src/i18n/locales/cn/about.json
@@ -16,7 +16,7 @@
   "excellentCustomerService": "卓越客户服务",
   "provideServices": "提供卓越执行、透明报价、优质工具、市场新闻及专业知识等服务，让用户获得更多的收益",
   "diversifiedProducts": "多元产品，资创未来",
-  "WCGProvides24Hours": "WCG国际有限公司为全球客户提供外汇、指数、能源、大宗商品及离岸人民币等差价合约的24小时在线环球金融产品交易服务。透过极具竞争力的产品主卓越领先的科技及专业贴心的服务，为客户提供顶级交易投资体验，达成财富增值的目标。",
+  "WCGProvides24Hours": "WCG Markets Ltd 为全球客户提供外汇、指数、能源、大宗商品及离岸人民币等差价合约的24小时在线环球金融产品交易服务。透过极具竞争力的产品主卓越领先的科技及专业贴心的服务，为客户提供顶级交易投资体验，达成财富增值的目标。",
   "WCGIsAlwaysYourWiseChoice": "WCG永远都是您的明智之选",
   "WCGKeepsAdvancingWithTimes": "WCG跟随时代不停进步，为此我们坚持投资最新科技，不仅能让稽核与开户速度变得更加快速，更提供了便捷的支付系统及出入款服务给所有的客户。我们使用最新的桥接科技连接MT4和顶级流通性提供商，让客户能够在出行时进行交易，并且立即对市场活动新闻和数据做出反应，为坚持我们“公平公正”的核心原则，我们确保全自动执行客户交易。同时我们也非常重视客户的交易体验，WCG庞大的专家团队会为您随时提供一对一的客户服务，让您享有全球最好的交易环境。",
   "goToThePlatformToDownload": "前往平台下载",
